[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="WordLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -78.0
custom_fonts/font = SubResource( 1 )

[node name="KeyboardWaitingInputTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="KeyboardWaitingInputTimer" to="." method="_on_KeyboardWaitingInputTimer_timeout"]
